css/custom.css
a {
    color: #000000;
    text-decoration: none;
    background-color: transparent;
  }
  
  a:hover {
    color: #000000;
    text-decoration: underline;
  }

  .btn-primary {
    color: #fff;
    background-color: #222222;
    border-color: #000000;
  }
  
  .btn-primary:hover {
    color: #fff;
    background-color: #555555;
    border-color: #444444;
  }

  hr.divider {
    max-width: 3.25rem;
    border-width: 0.2rem;
    border-color: #000000;
  }

  .bg-primary {
    background-color: #dedede !important;
  }

  .text-primary {
    color: #111111 !important;
  }

  #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
    color: rgba(0, 0, 0, 0.7) !important;
  }
  #mainNav .navbar-nav .nav-item .nav-link.active {
    color: rgba(0, 0, 0, 0.7) !important;
  }
  #mainNav .navbar-nav .nav-item .nav-link {
    color: rgba(0, 0, 0, 0.7);
    padding: 0 1rem;
  }
  .navbar-dark .navbar-brand {
    color: rgba(0, 0, 0, 0.7) !important;
  }

  @media (min-width: 992px) {
    #mainNav {
      -webkit-box-shadow: none;
      box-shadow: none;
      background-color: rgba(255, 255, 255, 0.5);
    }
    #mainNav .navbar-brand {
      color: rgba(0, 0, 0, 0.7);
    }
    #mainNav .navbar-brand:hover {
      color: #555555;
    }
    #mainNav.navbar-scrolled .navbar-brand:hover {
      color: #555555;
    }
    #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link {
      color: #212529;
    }
    #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
      color: #555555;
    }
  }

  header.masthead {
    padding-top: 10rem;
    padding-bottom: calc(10rem - 72px);
    background:  url("../img/bannerlowrescropped.png");
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: scroll;
    background-size: cover;
  }

